# Airline-Booking-Docker

./: .gitignore  pyproject.toml
backend/: Dockerfile  docker-compose.yml
backend/app/: Dockerfile  prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: c37f2581119e_.py
backend/app/app/: main.py
backend/app/app/auth/: router.py  schema.py
backend/app/app/booking/: models.py  router.py  schema.py  services.py  validator.py
backend/app/app/catalog/: models.py  router.py  schema.py  services.py  validator.py
backend/app/app/core/: _settings.env  config.py  hashing.py  security.py  settings.env
backend/app/app/database/: db.py  models.py  session.py
backend/app/app/user/: models.py  router.py  schema.py  services.py  validator.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  MyRoutes.js  index.js
frontend/src/components/: AirlineSearch.jsx  AirlineSearchResult.jsx  CardAirline.jsx  NavBar.jsx
